fix: modal on height resolution mobile

--- a/projetos/todo-list-react/src/components/Modal.module.css
+++ b/projetos/todo-list-react/src/components/Modal.module.css
@@ -25,6 +25,7 @@
 @media only screen and (max-width: 500px) {
     .modal {
         width: 95%;
+        height: 100%;
     }
 }
 
